# CI_tests

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cross_push.yml  push_test.yml
